--- a/maquette_4/css/styles.css
+++ b/maquette_4/css/styles.css
@@ -1,61 +1,11 @@
-:root{
-    --color-custom-primary: #f36239;
-}
-
 body {
-	font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-		"Noto Color Emoji";
+  font-family: Nunito, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+    Segoe UI Symbol, Noto Color Emoji;
 }
-.navbar a {
-	color: black;
+.bg-masthead {
+    background-image: url(../img/bg-masthead.jpg);
 }
-.navbar a:hover {
-	color: var(--color-custom-primary);
-}
-
-.masthead {
-	background-image: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(../img/bg-masthead.jpg);
-    background-position: center;    
-    padding-top: 4rem;  
-	height: 100vh;
-    min-height: 40rem;
-}
-
-.py-section{
-    padding-top: 7rem;
-    padding-bottom: 7rem;
-}
-
-.text-custom-primary {
-	color: var(--color-custom-primary);
-}
-
-.divider {
-	border-top: 3px solid;
-	width: 3rem;
-}
-
-.font-2{
-    font-family: Merriweather, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-}
-
-.btn-custom-primary {
-	--bs-btn-color: #fff;
-	--bs-btn-bg: var(--color-custom-primary);
-	--bs-btn-border-color: var(--color-custom-primary);
-	--bs-btn-hover-color: #fff;
-	--bs-btn-hover-bg: #e35026;
-	--bs-btn-hover-border-color: #dd4b20;
-	--bs-btn-focus-shadow-rgb: 130, 138, 145;
-	--bs-btn-active-color: #fff;
-	--bs-btn-active-bg: #dd4b20;
-	--bs-btn-active-border-color: #d8451a;
-	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #fff;
-	--bs-btn-disabled-bg: #f4623a;
-	--bs-btn-disabled-border-color: #f4623a;
-}
-
-.bg-custom-primary{
-    background-color: var(--color-custom-primary);
+.ls-1 {
+  letter-spacing: 0.5rem;
 }
